extends Control
class_name IngameMedalMenu

@onready var chrono: TextureRect = %Chrono
@onready var goldTotal: TextureRect = %GoldTotal
@onready var silverTotal: TextureRect = %SilverTotal
@onready var bronzeTotal: TextureRect = %BronzeTotal

@onready var blitz: TextureRect = %Blitz
@onready var goldLap: TextureRect = %GoldLap
@onready var silverLap: TextureRect = %SilverLap
@onready var bronzeLap: TextureRect = %BronzeLap
